--- a/app/src/main/res/layout/fragment_remote_control.xml
+++ b/app/src/main/res/layout/fragment_remote_control.xml
@@ -2,7 +2,8 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:stretchColumns="*"
-    android:id="@+id/fragment_remote_control_tableLayout">
+    android:id="@+id/fragment_remote_control_tableLayout"
+    android:background="@drawable/remote_background">
 
     <TextView
         android:layout_width="match_parent"
@@ -10,8 +11,10 @@
         android:text="0"
         android:id="@+id/fragment_remote_control_selectedTextView"
         android:layout_weight="2"
-        android:layout_gravity="center"
-        android:textSize="50dp" />
+        android:gravity="center"
+        android:textSize="50dp"
+        android:textColor="#ffffff"
+        android:background="@drawable/window_patch"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -19,11 +22,11 @@
         android:text="0"
         android:id="@+id/fragment_remote_control_workingTextView"
         android:layout_weight="1"
-        android:layout_margin="15dp"
-        android:background="#555555"
-        android:layout_gravity="center"
-        android:textColor="#cccccc"
-        android:textSize="20dp" />
+        android:layout_margin="0dp"
+        android:background="@drawable/bar_patch"
+        android:gravity="center"
+        android:textStyle="italic"
+        android:textSize="20dp"/>
 
     <!--<TableRow-->
         <!--android:layout_width="match_parent"-->
